[tool.poetry]
name = "gcloud-connectors"
description = "Python utilities to simplify connection with Google APIs"
license = "MIT"
authors = [ "Matteo Senardi <pualien@gmail.com>" ]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
build = "setup.py"

[tool.poetry.dependencies]
python = "3.7"
pybind11 = "^2.2"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"